# solarcost-bridge

./: .gitignore  LICENSE  README.md  init.sh  pyproject.toml  uninstall.sh
.github/workflows/: ci.yml
src/sa_totals_bridge/: __main__.py  api.py  client.py  config.py  html.py  install.py  store.py  uninstall.py
tests/: test_install.py
